--- a/views/include/postgrid.ejs
+++ b/views/include/postgrid.ejs
@@ -2,9 +2,9 @@
 <div class="container px-4 mx-auto mt-8">
 <div class="flex flex-wrap m-5">
   <% postList.forEach(post=> { %>
-    <div class="card w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-3  ">
+    <div class="card back w-full md:w-1/2 lg:w-1/3 xl:w-1/4 p-3  ">
       <div class="w-full p-3">
-        <div class=" border border-coolGray-100 shadow-dashboard rounded-md 
+        <div class="bg-white border border-coolGray-100 shadow-dashboard rounded-md 
           h-[330px] shadow-lg hover:shadow-xl overflow-hidden transform origin-bottom transition duration-400   ease-in 
          dark:bg-gray-500 min-w-60 relative card-shake ">
           <div class="flex flex-col justify-center items-center px-4 pt-8 pb-6 ">
