--- a/views/posts/postDetailPage.ejs
+++ b/views/posts/postDetailPage.ejs
@@ -22,19 +22,20 @@
                             <%= new Date(post.createdAt).toLocaleDateString() %>
                         </span>
                     </div>
-                    <div>
-                        <button type="button"
-                            class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-600"
-                            onclick="editPost('<%= post.postId %>')">
-                            수정
-                        </button>
-                        <button type="button"
-                            class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded hover:bg-red-600"
-                            onclick="deletePost('<%= post.postId %>', '<%= post.userId %>')">
-                            삭제
-                        </button>
-
-                    </div>
+                    <% if (sessionUser && sessionUser.userId===post.userId) { %>
+                        <div>
+                            <button type="button"
+                                class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-600"
+                                onclick="editPost('<%= post.postId %>')">
+                                수정
+                            </button>
+                            <button type="button"
+                                class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:text-sm md:py-1 md:px-3 rounded hover:bg-red-600"
+                                onclick="deletePost('<%= post.postId %>', '<%= post.userId %>')">
+                                삭제
+                            </button>
+                        </div>
+                        <% } %>
                 </div>
                 <hr class="border border-gray-300 my-2">
             </div>
@@ -197,8 +198,10 @@
                     <p class="text-gray-600 text-sm">${new Date(comment.createdAt).toLocaleDateString()}</p>
                 </div>
                 <div>
-                    <button onclick="editBtn(${comment.comId})" id="edit-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400">수정</button>
+                    ${sessionUser && sessionUser.userId === comment.userId ? `
+                    < button onclick = "editBtn(${comment.comId})" id = "edit-btn" type = "button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400" > 수정</button >
                     <button onclick="deletBtn(${comment.comId})" id="delete-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded hover:bg-red-600">삭제</button>
+                     ` : ''}
                 </div>
             </div>
             <p id="comContent-${comment.comId}" class="text-gray-600 pb-1">${comment.comContent}</p>
@@ -222,8 +225,10 @@
                             <p class="text-gray-600 text-sm">${new Date(reply.createdAt).toLocaleDateString()}</p>
                         </div>
                         <div>
+                            ${sessionUser && sessionUser.userId === reply.userId ? `
                             <button id="replyEdit-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded mr-0.5 md:mr-2 hover:bg-green-400">수정</button>
                             <button id="replyDelete-btn" type="button" class="bg-gray-500 text-white font-semibold py-0.5 px-1 text-xs md:py-1 md:px-3 rounded hover:bg-red-600">삭제</button>
+                            ` : ''}
                         </div>
                     </div>
                     <p class="text-gray-600 pb-1">${reply.comContent}</p>
